--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1687,7 +1687,7 @@
   profile_path: /company/about/#jamie-song
   image: /img/people/jamie-song.png
   image_description: Illustration of Jamie Song
-  position: Chief oF Staff
+  position: Chief of Staff
   bio: >
     Jamie's a product manager with a passion for good, clean product experiences.
     She excels at leading and managing cross-functional teams across the entire product
