--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -60,8 +60,8 @@
   category: Business Strategy & Operations
   location: Remote
   order: 100
-- title: Talent Sourcer
-  url: https://apply.workable.com/skylight/j/10A411E526/
+- title: Head of Talent
+  url: https://apply.workable.com/skylight/j/025B6BC2CF/
   category: Business Strategy & Operations
   location: Remote
   order: 110
