--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2483,7 +2483,7 @@
   profile_path: /company/about/#bryan-britten
   image: /img/people/bryan-britten.png
   image_description: Illustration of Bryan Britten
-  position: Data Engineer
+  position: Staff Data Engineer
   bio: >
     Bryan's a data engineer with a drive to work on projects that have meaningful impact. He previously worked at Meta and has built data solutions to help address issues of money laundering, financial fraud, gun violence, and disinformation campaigns. Bryan lives in Washington.
   active: true
