--- a/_data/team.yml
+++ b/_data/team.yml
@@ -92,7 +92,7 @@
   profile_path: /company/about/#robert-read
   image: /img/people/robert-read.jpg
   image_description: Photo of Robert Read
-  position: Software Engineer
+  position: Principal Software Engineer
   bio: >
     Robert served as a Presidential Innovation Fellow and co-founded 18F.
     He's been programming since he was 13 years old, and holds a PhD in computer science.
