--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2527,7 +2527,7 @@
   full_name: Zedd Shmais
   short_name: Z. Shmais
   profile_path: /company/about/#zedd-shmais
-  image: /img/people/zedd-shmais.jpg
+  image: /img/people/zedd-shmais.png
   image_description: Photo of Zedd Shmais
   position: Staff Software Engineer
   bio: >
