--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1568,7 +1568,7 @@
     Lucas is a software engineer with an unflinching faith in the ethical potential of
     technology to solve big societal problems. He specializes in mobile application
     architecture and engineering. Lucas lives in Georgia.
-  active: true
+  active: false
   order: 390
   socials:
     - name: LinkedIn
