--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2060,7 +2060,7 @@
   profile_path: /company/about/#bob-zhao
   image: /img/people/bob-zhao.jpg
   image_description: Photo of Bob Zhao
-  position: Software Engineer Intern
+  position: Software Engineer I
   bio: >
     Bob's a software engineer in pursuit of solving large-scale problems that matter. In 2020, he served as Civic Digital Fellow at the National Institutes of Health, and is currently pursuing a masters degree in computer science at  Washington University in St. Louis. He lives in Missouri.
   active: true
