--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -55,7 +55,7 @@
   category: Business Strategy & Operations
   location: Remote
   order: 100
-- title: Head of Talent
+- title: Head of People Operations
   url: https://apply.workable.com/skylight/j/025B6BC2CF/
   category: Business Strategy & Operations
   location: Remote
